--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   shared_preferences: ^2.5.2
+  flutter_spinkit: ^5.2.0 # For loading animations
+  animate_do: ^3.0.2 # For animations
+  intl: ^0.17.0
+  http: ^1.3.0
   provider: ^6.1.1
   flutter:
     sdk: flutter
@@ -61,6 +65,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/profil.jpg
+    - images/clear.png
+    - images/rain.png
+    - images/clouds.png
+    - images/snow.png
+    - images/meteo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
